welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:20: error: reassignment to val
setCouleurBrosse=T(0)	
                ^